Expanded portfolio. Started barebones contact form. Changed name to thedavidcummings.com

--- a/cv.html
+++ b/cv.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<!-- saved from url=(0027)http://agargara.com/cv.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>CV programming emphasis</title>
-	
-	<meta http-equiv="Generator" content="CV Maker - https://cvmkr.com/">
 	<link href="./cv_files/css" rel="stylesheet" type="text/css">
 	<style type="text/css">
 		body {
@@ -187,9 +184,9 @@
 						日本和歌山県日高郡日高町志賀460-1<br>日高マンションII-3					</span>
 				</p>
 						<div class="r">
-									<p class="email"><label>E-mail<span class="colon">:</span></label> <span class="value">dilots@gmail.com</span></p>
+									<p class="email"><label>E-mail<span class="colon">:</span></label> <span class="value">david@thedavidcummings.com</span></p>
 				
-									<p class="website"><label>Website<span class="colon">:</span></label> <span class="value">http://agargara.com</span></p>
+									<p class="website"><label>Website<span class="colon">:</span></label> <span class="value">http://thedavidcummings.com</span></p>
 				
 									<p class="phone"><label>Phone<span class="colon">:</span></label> <span class="value">090-6756-6845</span></p>
 							</div>
@@ -268,9 +265,6 @@
 					</div>
 			<div class="clear"> </div>
 		</div>
-		
 </div>
-	<div id="credit">Made with <a href="https://cvmkr.com/">CV Maker</a></div>
-	
-
-</body><div id="rikaichan-window" style="width: auto; height: auto; max-width: 600px; top: 150px; left: 270px; display: none;"></div></html>
+</body>
+</html>
