Cleaned up SVG. Rearranged portfolio. Fixed contact form.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
-	<meta charset="UTF-8" />
+	<meta charset="UTF-8"/>
 	<title>I'm David Cummings. I love to code and create.</title>
 	<meta name="description" content="I'm David Cummings. I love to code and create."/>
 	<meta name="keywords" content="David, Cummings, Code, Development, Design, digital design">
@@ -12,8 +12,8 @@
 	<meta property="og:title" content="David Cummings Online Portfolio">
 	<meta property="og:url" content="http://thedavidcummings.com">
 	<meta property="og:image" content="http://thedavidcummings.com/images/logo.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
-	<link rel='stylesheet' href='agargara.css' type='text/css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel='stylesheet' href='agargara.css' type='text/css'/>
 </head>
 <body id="top">
 	<nav class="cf">
@@ -77,19 +77,6 @@
 	            	</li>
 	            	<li class="cf">
 	            		<h2>
-		            		<a href="http://pistonsource.iiichan.net">
-		            			Piston Source Records
-		            		</a>
-		            	</h2>
-		            	<a href="http://pistonsource.iiichan.net">
-		            		<img title="Piston Source" src="images/pistonsource-screenshot.png">
-		            	</a>
-	            		<div class="description">
-	            		A netlabel dedicated to releasing music made with <a href="http://hp.vector.co.jp/authors/VA022293/pxtone/">Piston Collage</a>. Written in 2008, the techniques used on this website are now somewhat dated, but the site is completely hand-coded with valid HTML and CSS. Styled to look like the program Piston Collage.
-	            		</div>
-	            	</li>
-	            	<li class="cf">
-	            		<h2>
 		            		<a href="https://github.com/agargara/film-score-generator">
 		            			Film Score Generator
 		            		</a>
@@ -98,7 +85,7 @@
 		            		<img title="Film Score Generator" src="images/filmScoreGenerator-screenshot.png">
 		            	</a>
 	            		<div class="description">
-	            		A <a href="http://cycling74.com/products/max/">Max/MSP/Jitter</a> program that automatically scores videos. A database of music clips is analyzed and tagged with various aspects. The program analyzes a video as it plays and tries to select appropriate music clips from the database to match. <a href="http://vimeo.com/22379628">Watch a demo.</a>
+	            		A <a href="http://cycling74.com/products/max/">Max/MSP/Jitter</a> program that automatically scores videos. The program analyzes a video as it plays and tries to select appropriate music clips from a database. <a href="http://vimeo.com/22379628">Watch a demo.</a>
 	            		</div>
 	            	</li>
 	            	<li class="cf">
@@ -111,7 +98,7 @@
 		            		<img title="Dodge City" src="images/dodgeCity-screenshot.png">
 		            	</a>
 	            		<div class="description">
-	            		A small game about dodging falling cubes. The graphics engine is coded from scratch. <a href="http://agargara.com/files/DodgeCity.zip">Download and play (executable .jar)</a>
+	            		A small game about dodging falling cubes written in Java. The graphics engine is coded from scratch. How long can you survive? <br><a href="http://agargara.com/files/DodgeCity.zip">Download and play (executable .jar)</a>
 	            		</div>
 	            	</li>
 	            	<li class="cf">
@@ -124,7 +111,20 @@
 		            		<img title="Musical L-Systems" src="images/lsystems-screenshot.png">
 		            	</a>
 	            		<div class="description">
-	            		<a href="https://en.wikipedia.org/wiki/L-system">Lindenmayer systems</a>, or L-systems, are grammars that are usually used to model organic structures. This is a Max/MSP program that uses the production rules of L-Systems to generate musical sequences. <a href="http://agargara.com/files/LSystems.maxpat" title="Download">Download the source</a>.
+	            		 A <a href="http://cycling74.com/products/max/">Max/MSP</a> program that uses the production rules of <a href="https://en.wikipedia.org/wiki/L-system">Lindenmayer systems</a> to generate musical sequences.<br><a href="http://agargara.com/files/LSystems.maxpat" title="Download">Download the source</a>
+	            		</div>
+	            	</li>
+	            	<li class="cf">
+	            		<h2>
+		            		<a href="http://pistonsource.iiichan.net">
+		            			Piston Source Records
+		            		</a>
+		            	</h2>
+		            	<a href="http://pistonsource.iiichan.net">
+		            		<img title="Piston Source" src="images/pistonsource-screenshot.png">
+		            	</a>
+	            		<div class="description">
+	            		A netlabel dedicated to releasing music made with <a href="http://hp.vector.co.jp/authors/VA022293/pxtone/">Piston Collage</a>. Written in 2008, the techniques used on this website are dated, but the site is hand-coded with valid HTML and CSS. Styled to look like the program Piston Collage.
 	            		</div>
 	            	</li>
 	            </ul>
@@ -142,18 +142,9 @@
 				</div>
 				<div id="rightFormBox" class="cf">
 					<form action="contact.php" method="post" name="contactForm" id="contactForm">
-						<div id="nameBox" class="first formbox clearfix">
-							<label for="name">Name</label>
-							<input class="inputfield" type="text" name="name" id="name"/>	
-						</div>
-						<div id="emailBox" class="formbox clearfix">
-							<label for="email">E-Mail</label>
-							<input class="inputfield" type="text" name="email" id="email"/>	
-						</div>
-						<div id="messageBox" class="formbox clearfix">
-							<label for="message">Message</label>
-							<textarea rows="10" name="comingMessage" id="comingMessage"></textarea>
-						</div>
+						<input class="inputfield" type="text" name="name" placeholder="Your Name"/>
+						<input class="inputfield" type="text" name="email" placeholder="Your E-mail"/>	
+						<textarea class="inputfield" rows="10" name="comingMessage" placeholder="Your Message"></textarea>
 						<input id="clear_btn" type="reset" name="clear" value="clear"> 
 						<input id="submit_btn" type="submit" name="submit" value="submit">
 					</form>
