--- a/index.html
+++ b/index.html
@@ -132,26 +132,36 @@
         </div>
         <div id="contact" class="sliding-content">
         	<div class="inner">
-				<div id="leftFormBox" class="cf">
+        		<h1>I'd love to hear from you.</h1>
+        		<br>
+				<div id="contact-left" class="cf">
 					<ul id="contactInfo">
 						<li>David Cummings</li>
 						<li>Wakayama, Japan</li>
 						<li>090 (6756) 6845</li>
-						<li><a href="mailto:david@TheDavidCummings.com?subject=Contact Request">david@TheDavidCummings.com</a></li>
+						<li><span id="email">
+							david@<span>rem@veme.</span>TheDavidCummings.com
+						</span></li>
 					</ul>
 				</div>
-				<div id="rightFormBox" class="cf">
-					<form action="contact.php" method="post" name="contactForm" id="contactForm">
-						<input class="inputfield" type="text" name="name" placeholder="Your Name"/>
-						<input class="inputfield" type="text" name="email" placeholder="Your E-mail"/>	
-						<textarea class="inputfield" rows="10" name="comingMessage" placeholder="Your Message"></textarea>
-						<input id="clear_btn" type="reset" name="clear" value="clear"> 
-						<input id="submit_btn" type="submit" name="submit" value="submit">
+				<div id="contact-right" class="cf">
+					<?php include 'validate.php'; ?>
+					<form class="cmxform" id="contactForm" method="get" action="index.html">
+						<input id="cname" name="name" size="25"  class="required" minlength="2" placeholder="Your Name"/>
+						<input id="cemail" name="email" size="25"  class="required email"  placeholder="Your e-mail"/>
+						<textarea id="ccomment" name="comment" rows="8"  class="required" placeholder="Your Message"></textarea>
+						<input class="submit" type="submit" value="Send!">
 					</form>
 				</div>
 	        </div>
         </div>
 	</div>
+	<script type="text/javascript">
+		var s="=b!isfg>#nbjmup;ebwjeAUifEbwjeDvnnjoht/dpn#?ebwjeAUifEbwjeDvnnjoht/dpn=0b?";
+		m=""; for (i=0; i<s.length; i++) m+=String.fromCharCode(s.charCodeAt(i)-1); document.getElementById('email').innerHTML=(m);
+	</script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="js/slider.js"></script>
+	<!-- <script src="js/jquery.validate.min.js"></script>
+	<script src="js/jquery.form.js"></script> -->
 </html>
